# mcp-hypothesis-tester

./: .gitignore  IMPLEMENTATION-1.md  IMPLEMENTATION_COMPLETE.md  LLM_USAGE_GUIDE.md  PROJECT_STRUCTURE.md  README.md  USAGE_GUIDE.md  fastmcp.json  generate_datasets.py  hypothesis-tester-for-megginners.md  main.py  pyproject.toml  requirements.txt  runner.sh  sample-cases-and-explanation.md  test_implementation.py
datasets/: clinical_trial.json  coffee_machine_ratings.json  coffee_shop_traffic.json  customer_satisfaction.json  example.json  inventory_forecast.json  normality_test_example.json  sales_example.json  sales_three_stores.json  website_redesign.json
src/: mcp_server.py
src/core/: base_test.py  cache_manager.py
src/datasets/: loader.py
src/tests/non_parametric/: rank_tests.py
src/tests/normality/: normality_tests.py
src/tests/parametric/: anova.py  t_tests.py
src/tests/variance/: variance_tests.py
src/utils/: test_suggester.py
